--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,5 @@
-@import 'layout/header';
-@import 'core/variables';
 @import 'core/reset';
-
-* {
-  box-sizing: border-box;
-  border: 2px solid white;
-}
+@import 'core/variables';
+@import 'layout/base';
+@import 'layout/header';
+@import 'layout/section1';
