--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,14 @@
-/*naranja*//*blue*//*lightblue*//*darkblue*//* TYPOGRAPHY WEIGHT */html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
-}
-
-* {
+}/*lightblue*//*darkblue*//* TYPOGRAPHY WEIGHT */* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border: 2px solid white;
-}
-
-.header {
+}/*lightblue*//*darkblue*//* TYPOGRAPHY WEIGHT */.header {
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -42,7 +38,7 @@
   font-size: 42px;
   width: 290px;
   height: 110px;
-  font-family: "RobotoSlab";
+  font-family: "Roboto Slab", serif;
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
@@ -73,10 +69,57 @@
   background: white;
 }
 
-.enlace-ancla {
+.section1 {
+  padding: 30px 15px 45px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.section1 p.insomnia {
+  color: #8ccbea;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+}
+
+.section1 h3 {
+  font-weight: bold;
+  font-family: "Roboto Slab", serif;
+  font-size: 24px;
+  margin-top: 3px;
+}
+
+.section1 p.article {
+  color: #4a4a4a;
+  font-family: "Roboto", sans-serif;
+  margin-top: 15px;
+}
+
+.section1 .boton-go {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 76px;
+  height: 45px;
+  border-radius: 22.5px;
+  border: solid 2px #f26002;
+  color: #f26002;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  background-color: #fff;
+  margin: 30px 229px 45px 15px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.section1 a.no-link-decoration {
+  text-decoration: none;
+  color: #f26002;
 }
 
 /*# sourceMappingURL=main.css.map */
