--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }/*lightblue*//*darkblue*//* TYPOGRAPHY WEIGHT */* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  border: 2px solid white;
+}
+
+body {
+  line-height: 1.4;
 }/*lightblue*//*darkblue*//* TYPOGRAPHY WEIGHT */.header {
   height: 100vh;
   display: -webkit-box;
@@ -55,7 +58,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   margin: 0 15px;
 }
 
-.circulo-hero {
+.circulo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -67,10 +70,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   height: 45px;
   border-radius: 50%;
   background: white;
+  z-index: 4;
 }
 
 .section1 {
-  padding: 30px 15px 45px 15px;
+  padding: 30px 15px 0 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -80,26 +84,26 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   flex-direction: column;
 }
 
-.section1 p.insomnia {
+.insomnia {
   color: #8ccbea;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
 }
 
-.section1 h3 {
+.encabezado {
   font-weight: bold;
   font-family: "Roboto Slab", serif;
   font-size: 24px;
   margin-top: 3px;
 }
 
-.section1 p.article {
+.article {
   color: #4a4a4a;
   font-family: "Roboto", sans-serif;
   margin-top: 15px;
 }
 
-.section1 .boton-go {
+.boton-go {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -117,9 +121,104 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   justify-content: center;
 }
 
-.section1 a.no-link-decoration {
+a.no-link-decoration {
   text-decoration: none;
   color: #f26002;
+}
+
+.section2 {
+  display: grid;
+  text-align: center;
+}
+
+.grid {
+  height: 624px;
+  background-color: #eff9ff;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  grid-gap: 0;
+}
+
+.a {
+  padding: 30px 15px 45px 15px;
+  margin-top: 0;
+}
+
+.titulo-purchase {
+  font-size: 18px;
+  font-family: "Roboto Slab", serif;
+  font-weight: bold;
+  width: 184px;
+  height: 30px;
+}
+
+.texto-purchase {
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  width: 180px;
+  height: 63px;
+  margin-bottom: 45px;
+}
+
+.boton-reasons {
+  width: 184px;
+  height: 45px;
+  border-radius: 22.5px;
+  background-color: #f26002;
+  font-size: 20px;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+
+.footer {
+  background-color: #304268;
+  height: 128px;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  position: relative;
+}
+
+.circulo-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background: white;
+  z-index: 4;
+  margin: 0;
+  position: absolute;
+  top: -25px;
 }
 
 /*# sourceMappingURL=main.css.map */
