--- a/styles/main.css
+++ b/styles/main.css
@@ -133,6 +133,15 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-transition: background-color ease 0.3s;
+  transition: background-color ease 0.3s;
+  -webkit-transition: width ease 0.3;
+  transition: width ease 0.3;
+}
+
+.boton-go:hover {
+  background-color: #f7bf18;
+  width: 72px;
 }
 
 a.no-link-decoration {
@@ -194,6 +203,12 @@ a.no-link-decoration {
   -ms-flex-pack: center;
   justify-content: center;
   margin-bottom: 60px;
+  -webkit-transition: background-color ease 0.3s;
+  transition: background-color ease 0.3s;
+}
+
+.boton-reasons:hover {
+  background-color: #f7bf18;
 }
 
 .footer {
