--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -3,11 +3,10 @@
 $color-primary: #f26002;
 $color-secundary: #0271bc;
 $color-bg-lighter:#fff;
-$color-bg-light: #eff9ff; /*lightblue*/
-$color-bg-dark: #304268; /*darkblue*/
+$color-bg-light: #eff9ff;
+$color-bg-dark: #304268;
 $color-text-light: #fff;
 $gray         :   #4a4a4a;
-
 
 $darkgray     :   #95a5a6;
 $dark         :   #2c3e50;
@@ -24,13 +23,17 @@ $normal: 400;
 $semibold: 500;
 $bold: 700;
 
+$font-size-super-xl:    100px;
+$font-size-super:       80px;
 $font-size-su:          42px;
+$font-size-xxl-plus:    32px;
 $font-size-xxl:         24px;
 $font-size-xl:          20px;
 $font-size-l:           18px;
-$font-size-m-plus:      15px;
+$font-size-m-plus:      16px;
 $font-size-m:           14px;
-$font-size-s-plus:      13px;
+
+
 $font-size-s:           12px;
 $font-size-xs:          11px;
 $font-size-mi:          10px;
