--- a/scss/layout/_section1.scss
+++ b/scss/layout/_section1.scss
@@ -1,26 +1,76 @@
+
 .section1 {
-  padding: 30px 15px 0 15px;
+  padding: 0 15px;
   display: flex;
   flex-direction: column;
 }
 
 .insomnia {
+  height: 30px;
   color: #8ccbea;
   font-size: $font-size-m;
   font-family: $font-family-secundary;
+  margin-top: 30px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2.14;
+  letter-spacing: normal;
+
+  @media all and (min-width: 768px) {
+    margin-left: 39px;
+    width: 216px;
+  }
+  @media all and (min-width: 1280px) {
+    font-size:$font-size-m-plus;
+  }
+}
+
+.contenedor-sec1 {
+  display: flex;
+  flex-direction: column;
+@media all and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 730px;
+  }
 }
 
 .encabezado {
-  font-weight: bold;
+  display: flex;
+  height: 60px;
+  width: 290px;
+  font-weight: $bold;
   font-family: $font-family-primary;
   font-size: $font-size-xxl;
-  margin-top: 3px;
+  margin: 1px 0 15px 0;
+
+  @media all and (min-width: 768px) {
+    margin-left: 39px;
+    width: 690px;
+    height: 45px;
+  }
+  @media all and (min-width: 768px) {
+    font-size:$font-size-xxl-plus;
+  }
 }
 
 .article {
+  height: 120px;
   color: $gray;
   font-family: $font-family-secundary;
-  margin-top: 15px;
+
+  @media all and (min-width: 768px) {
+    margin-left: 39px;
+    width: 690px;
+    height: 60px;
+    line-height: 30px;
+  }
+
+  @media all and (min-width: 1280px) {
+    font-size: $font-size-xl;
+  }
 }
 
 .boton-go {
@@ -28,7 +78,7 @@
   width: 76px;
   height: 45px;
   border-radius: 22.5px;
-  border: solid 2px #f26002;
+  border: solid 2px $color-primary;
   color: $color-primary;
   font-size: $font-size-xl;
   font-family: $font-family-secundary;
@@ -40,7 +90,17 @@
 
   &:hover {
     background-color: #f7bf18;
-    width: 72px;
+  }
+
+  @media all and (min-width: 768px) {
+    width: 91px;
+    margin-left: 39px;
+    margin-bottom: 60px;
+  }
+
+  @media all and (min-width: 768px) {
+    width: 160px;
+
   }
 }
 
