Add css indetation

--- a/scss/components/_typhography.scss
+++ b/scss/components/_typhography.scss
@@ -1,1 +1,24 @@
 
+/* TYPOGRAPHY WEIGHT */
+
+$light: 300;
+$normal: 400;
+$semibold: 500;
+$bold: 700;
+
+$font-size-super-xl:    100px;
+$font-size-super:       80px;
+$font-size-su:          42px;
+$font-size-xxl-plus:    32px;
+$font-size-xxl:         24px;
+$font-size-xl:          20px;
+$font-size-l:           18px;
+$font-size-m-plus:      16px;
+$font-size-m:           14px;
+
+$font-size-s:           12px;
+$font-size-xs:          11px;
+$font-size-mi:          10px;
+
+$font-family-primary: 'Roboto Slab', serif;
+$font-family-secundary: 'Roboto', sans-serif;
