--- a/scss/layout/_section2.scss
+++ b/scss/layout/_section2.scss
@@ -18,10 +18,11 @@
   margin: 30px 15px 45px 15px;
 }
 
-.b, .c, .d {
+.b,
+.c,
+.d {
   display: flex;
   flex-direction: column;
-
 }
 
 .titulo-purchase {
