--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,17 @@
 @import 'core/reset';
 @import 'core/variables';
+@import 'components/typhography';
 @import 'layout/base';
 @import 'layout/header';
 @import 'layout/section1';
 @import 'layout/section2';
 @import 'layout/grid';
 @import 'layout/footer';
+
+/* preguntar donde van las variables de tipografia */
+
+/* hacer bien la paleta de colores */
+
+/* hacer mediaqueris del footer */
+
+/* Hacer medias de 1200 para grid */
