--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   padding: 0;
   border: 0;
   font-size: 100%;
-  vertical-align: baseline;
 }/* TYPOGRAPHY WEIGHT */* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -312,9 +311,7 @@ a.no-link-decoration {
 
 .love-components {
   margin-bottom: 30px;
-}
-
-@media all and (min-width: 768px) {
+}/* preguntar donde van las variables de tipografia *//* hacer bien la paleta de colores *//* hacer mediaqueris del footer *//* Hacer medias de 1200 para grid */@media all and (min-width: 768px) {
   .header {
     height: 768px;
   }
