--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'core/reset';
 @import 'core/variables';
+@import 'core/mixins';
 @import 'components/typhography';
 @import 'layout/base';
 @import 'layout/header';
@@ -7,6 +8,7 @@
 @import 'layout/section2';
 @import 'layout/grid';
 @import 'layout/footer';
+
 
 /* preguntar donde van las variables de tipografia */
 
