--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -12,10 +12,9 @@
 
 .a {
   @media all and (min-width: 768px) {
-    display: flex;
+    @include flex-align;
+
     margin: 30 auto 45 auto;
-    justify-content: center;
-    align-items: center;
     grid-column-start: span 3;
   }
 }
