--- a/scss/layout/_section1.scss
+++ b/scss/layout/_section1.scss
@@ -6,16 +6,14 @@
 }
 
 .insomnia {
+  @include normalize;
   height: 30px;
   color: #8ccbea;
   font-size: $font-size-m;
   font-family: $font-family-secundary;
   margin-top: 30px;
   font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 2.14;
-  letter-spacing: normal;
 
   @media all and (min-width: 768px) {
     margin-left: 39px;
@@ -77,7 +75,8 @@
 }
 
 .boton-go {
-  display: flex;
+  @include flex-align;
+
   width: 76px;
   height: 45px;
   border-radius: 22.5px;
@@ -87,7 +86,7 @@
   font-family: $font-family-secundary;
   background-color: $color-bg-lighter;
   margin: 30px 229px 45px 15px;
-  justify-content: center;
+
   transition: background-color ease 0.3s;
   transition: width ease 0.3;
 
