--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,65 @@
+@charset "UTF-8";
+
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-}/* TYPOGRAPHY WEIGHT */* {
+}/* TYPOGRAPHY WEIGHT */.txt-md {
+  font-size: 16px;
+}
+
+.txt-lg {
+  font-size: 20px;
+  line-height: 1.6;
+}
+
+.txt-xl {
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.txt-center {
+  text-align: center;
+}
+
+.txt-left {
+  text-align: left;
+}
+
+.txt-right {
+  text-align: right;
+}
+
+.txt-primary {
+  color: #f26002;
+}
+
+.txt-light {
+  color: #eff9ff;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.light {
+  font-weight: 300;
+}
+
+.normal {
+  font-weight: 400;
+}
+
+.medium {
+  font-weight: 500;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -51,28 +107,28 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
   text-transform: uppercase;
   font-size: 42px;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 55px;
-  letter-spacing: normal;
   color: #fff;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-  margin: 240px 15px 10px 15px;
+  margin: 240px auto 10px auto;
 }
 
 .parrafo-hero {
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
   color: #fff;
   text-align: center;
   margin: 0 15px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
 }
 
 .circulo {
@@ -109,16 +165,16 @@ body {
 }
 
 .insomnia {
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: normal;
   height: 30px;
   color: #8ccbea;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   margin-top: 30px;
   font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 2.14;
-  letter-spacing: normal;
 }
 
 .contenedor-sec1 {
@@ -153,6 +209,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 76px;
   height: 45px;
   border-radius: 22.5px;
@@ -162,9 +224,6 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #fff;
   margin: 30px 229px 45px 15px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   -webkit-transition: background-color ease 0.3s;
   transition: background-color ease 0.3s;
   -webkit-transition: width ease 0.3;
@@ -230,6 +289,15 @@ a.no-link-decoration {
 }
 
 .boton-reasons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 184px;
   height: 45px;
   border-radius: 22.5px;
@@ -237,15 +305,6 @@ a.no-link-decoration {
   font-size: 20px;
   color: #fff;
   font-family: "Roboto", sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   margin: 0 auto;
   margin-bottom: 60px;
   -webkit-transition: background-color ease 0.3s;
@@ -267,22 +326,22 @@ a.no-link-decoration {
 }
 
 .footer {
-  background-color: #304268;
-  height: 128px;
-  color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background-color: #304268;
+  height: 128px;
+  color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   position: relative;
@@ -303,6 +362,29 @@ a.no-link-decoration {
   margin: 0;
   position: absolute;
   top: -25px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.circulo-footer:hover {
+  -webkit-transform-origin: center bottom;
+  transform-origin: center bottom;
+  -webkit-transform: rotateX(-90deg) translateY(100%);
+  transform: rotateX(-90deg) translateY(100%);
+}
+
+.circulo-footer:after {
+  top: -100%;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  background: #3a9999;
+  border-radius: 5px;
+  content: ‘Flipped’;
+  -webkit-transform-origin: left bottom;
+  transform-origin: left bottom;
+  -webkit-transform: rotateX(90deg);
+  transform: rotateX(90deg);
 }
 
 .copiright {
@@ -311,15 +393,16 @@ a.no-link-decoration {
 
 .love-components {
   margin-bottom: 30px;
-}/* preguntar donde van las variables de tipografia *//* hacer bien la paleta de colores *//* hacer mediaqueris del footer *//* Hacer medias de 1200 para grid */@media all and (min-width: 768px) {
-  .header {
-    height: 768px;
-  }
+}
 
+.primary {
+  color: #f26002;
+}/* preguntar donde van las variables de tipografia *//* hacer bien la paleta de colores *//* hacer mediaqueris del footer *//* Hacer medias de 1200 para grid */@media all and (min-width: 768px) {
   .encabezado-principal {
     font-size: 80px;
-    margin: 384px 39px 20px 39px;
+    margin: 384px auto 20px auto;
     line-height: 106px;
+    width: 690px;
   }
 
   .parrafo-hero {
@@ -389,18 +472,35 @@ a.no-link-decoration {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: 30 auto 45 auto;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    margin: 30 auto 45 auto;
     grid-column-start: span 3;
   }
 
   .e {
     grid-column-start: span 3;
+  }
+}
+
+@media (min-width: 1024px) {
+  .txt-md {
+    font-size: 18px;
+    line-height: 1.68;
+  }
+
+  .txt-lg {
+    font-size: 26px;
+    line-height: 1.4;
+  }
+
+  .txt-xl {
+    font-size: 54px;
+    font-weight: 300;
   }
 }
 
