--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
   margin: 0;
   padding: 0;
@@ -366,25 +364,11 @@ a.no-link-decoration {
   transform-style: preserve-3d;
 }
 
-.circulo-footer:hover {
-  -webkit-transform-origin: center bottom;
-  transform-origin: center bottom;
-  -webkit-transform: rotateX(-90deg) translateY(100%);
-  transform: rotateX(-90deg) translateY(100%);
-}
-
-.circulo-footer:after {
-  top: -100%;
-  left: 0;
-  width: 100%;
-  position: absolute;
-  background: #3a9999;
-  border-radius: 5px;
-  content: ‘Flipped’;
-  -webkit-transform-origin: left bottom;
-  transform-origin: left bottom;
-  -webkit-transform: rotateX(90deg);
-  transform: rotateX(90deg);
+.jump:hover {
+  -webkit-transform-origin: 50% 20%;
+  transform-origin: 50% 20%;
+  -webkit-animation: jump .5s linear alternate infinite;
+  animation: jump .5s linear alternate infinite;
 }
 
 .copiright {
@@ -522,6 +506,40 @@ a.no-link-decoration {
 
   .article {
     font-size: 20px;
+  }
+}
+
+@-webkit-keyframes jump {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  }
+
+  40% {
+    -webkit-transform: translate3d(0, 30%, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 30%, 0) scale3d(1, 1, 1);
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, 70%, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 70%, 0) scale3d(1, 1, 1);
+  }
+}
+
+@keyframes jump {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  }
+
+  40% {
+    -webkit-transform: translate3d(0, 30%, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 30%, 0) scale3d(1, 1, 1);
+  }
+
+  100% {
+    -webkit-transform: translate3d(0, 70%, 0) scale3d(1, 1, 1);
+    transform: translate3d(0, 70%, 0) scale3d(1, 1, 1);
   }
 }
 
