--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,6 +9,9 @@
   background-image: url("../images/cover.jpg");
   background-size: cover;
   background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .btn {
@@ -32,11 +35,11 @@
   line-height: 55px;
   color: $color-text-light;
   text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-  margin: 240px auto 10px auto;
+  margin: 0 auto 10px auto;
 
   @media all and (min-width: 768px) {
     font-size: $font-size-super;
-    margin: 384px auto 20px auto;
+    margin: 0 auto 20px auto;
     line-height: 106px;
     width: 690px;
   }
@@ -44,7 +47,7 @@
   @media all and (min-width: 1280px) {
     width: 730px;
     font-size: $font-size-super-xl;
-    margin: 200px auto 0 auto;
+    margin: 0 auto 0 auto;
     line-height: 132px;
   }
 }
