--- a/scss/layout/_section1.scss
+++ b/scss/layout/_section1.scss
@@ -1,3 +1,16 @@
+.fecha  {
+  background-color: $color-primary;
+  color:$color-text-light;
+  padding: 0 10px;
+  display: flex;
+}
+.h2 {
+
+}
+
+.p {
+  justify-content: flex-end;
+}
 
 .section1 {
   padding: 0 15px;
