--- a/styles/main.css
+++ b/styles/main.css
@@ -161,6 +161,21 @@ body {
   z-index: 4;
 }
 
+.fecha {
+  background-color: #f26002;
+  color: #fff;
+  padding: 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.p {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
 .section1 {
   padding: 0 15px;
   display: -webkit-box;
